[tool.poetry]
name = "lm-evaluation-harness"
version = "0.1.0"
description = ""
authors = ["leo-gan <leo.gan.57@gmail.com>"]
readme = "README.md"
packages = [{include = "lm_evaluation_harness"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
